<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/dashboard"
                android:icon="@drawable/ic_nav_dash"

                android:title="@string/menu_dashboard"/>
       <!-- <item
                android:id="@+id/track_vehicle"
                android:icon="@drawable/ic_nav_track"
                android:title="@string/menu_track_vehicle"/>-->
        <item
                android:id="@+id/certificates"
                android:icon="@drawable/ic_nav_certificate"
                android:title="@string/online_classess"/>
        <item
                android:id="@+id/about"
                android:icon="@drawable/ic_nav_abolut"
                android:title="@string/menu_about"/>
    </group>
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_abouts"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/phn_no" />
        <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/save"
                app:actionViewClass="pasu.nakshatraDesigners.utils.widgets.CustomButton"/>


    </group>
</menu>