<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="passwordViewModel"
            type="pasu.nakshatraDesigners.signIn.viewModel.PasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp4">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutGetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:visibility="@{passwordViewModel.showGetPasswordLayout ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgCancelDialog">

            <pasu.nakshatraDesigners.utils.widgets.CustomTextview
                android:id="@+id/tvForgotMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:gravity="start"
                android:maxLines="3"
                android:padding="@dimen/dp10"
                android:text="@string/forgot_password_message"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/countryPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp8"
                android:visibility="invisible"
                android:layout_marginBottom="@dimen/dp8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotMessage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edMobileLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginBottom="@dimen/dp8"
                android:gravity="center"
                android:hint="@string/hint_enter_your_phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryPicker">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                    android:maxLength="@integer/phNoLength"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18" />
            </com.google.android.material.textfield.TextInputLayout>

            <pasu.nakshatraDesigners.utils.widgets.CustomButton
                android:id="@+id/btnDone"
                style="@style/StateListAnim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginTop="@dimen/pad_16dp"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_weight="1.0"
                android:shadowColor="#000"
                app:type="@string/postive_button"
                android:text="@string/get_password"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edMobileLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <pasu.nakshatraDesigners.utils.widgets.CustomTextview
            android:id="@+id/tvWhyPhoneMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:gravity="start"
            android:padding="@dimen/dp10"
            android:text="@string/why_need_user_number"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp16"
            android:visibility="@{passwordViewModel.showGetPasswordLayout ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgCancelDialog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>